--- a/packages/sensor_fusion_localization/package.xml
+++ b/packages/sensor_fusion_localization/package.xml
@@ -10,12 +10,16 @@
   <license>MIT</license>
   <buildtool_depend>catkin</buildtool_depend>
   <build_depend>duckietown_msgs</build_depend>
+  <build_depend>geometry_msgs</build_depend>
   <build_depend>std_msgs</build_depend>
   <build_depend>rospy</build_depend>
+  <build_depend>sensor_msgs</build_depend>
   <build_export_depend>duckietown_msgs</build_export_depend>
   <build_export_depend>rospy</build_export_depend>
   <exec_depend>duckietown_msgs</exec_depend>
+  <exec_depend>geometry_msgs</exec_depend>
   <exec_depend>rospy</exec_depend>
+  <exec_depend>sensor_msgs</exec_depend>
   <exec_depend>std_msgs</exec_depend>
 
 
